<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_barcode"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:background="@color/cardview_shadow_start_color"
            android:onClick="onBarcodeButtonClicked"
            app:srcCompat="@drawable/ic_barcode_black_24dp" />

        <EditText
            android:id="@+id/edit_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="10"
            android:hint="@string/hint_search_text" />

        <ImageView
            android:id="@+id/image_search"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:onClick="onSearchButtonClicked"
            android:src="@drawable/ic_search_black_18dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <RadioGroup
        android:id="@+id/rbtng_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:background="@drawable/rbtn_selector"
            android:textColor="@drawable/rbtn_textcolor_selector"
            android:textSize="20dp"
            android:padding="5dp"
            android:text="@string/rbtn_all" />

        <RadioButton
            android:id="@+id/rbtn_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/rbtn_selector"
            android:textColor="@drawable/rbtn_textcolor_selector"
            android:textSize="20dp"
            android:padding="5dp"
            android:text="@string/rbtn_title" />

        <RadioButton
            android:id="@+id/rbtn_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:background="@drawable/rbtn_selector"
            android:textColor="@drawable/rbtn_textcolor_selector"
            android:textSize="20dp"
            android:padding="5dp"
            android:text="@string/rbtn_author" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rbtng_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn_popular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:padding="5dp"
            android:text="@string/rbtn_popular"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/rbtn_accu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15dp"
            android:padding="5dp"
            android:text="@string/rbtn_accu" />

        <RadioButton
            android:id="@+id/rbtn_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15dp"
            android:padding="5dp"
            android:text="@string/rbtn_date" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tag"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:minWidth="70dp"
                android:text="@string/have_book_status" />

            <Button
                android:id="@+id/btn_have_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:minHeight="30dp"
                android:minWidth="70dp"
                android:text="@string/have_book"
                android:textColor="@color/orange" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:minWidth="70dp"
                android:text="@string/read_book_status" />

            <Button
                android:id="@+id/btn_want_read"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:minHeight="30dp"
                android:minWidth="80dp"
                android:text="@string/want_to_read"
                android:textColor="@color/blue" />

            <Button
                android:id="@+id/btn_read"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/blue"
                android:minHeight="30dp"
                android:minWidth="80dp"
                android:text="@string/read_book"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_book"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_error_message_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/error_message"
            android:textSize="20sp"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_height="42dp"
            android:layout_width="42dp"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </FrameLayout>
</LinearLayout>
